<b>2009-07-18</b>

* Airline maps default to direct only, codeshares can be enabled in filter
* Non-IATA airlines/airports now filtered out from quicksearch
* Inactive airlines now filtered out from quicksearch
* No map resizing when routemap airline filter is changed

<b>2009-07-17</b>

* Lithuanian updated
* Bugfix: Airline maps gray out all airports with codeshares (2822898)

<b>2009-07-14</b>

* Quick search now supports airlines
* Airline filter can now be used for airport route maps
* Codeshare flights now shown as dotted lines
* Distances can be shown in mi or km
* Statsbox not shown in route map mode
* Purged unused strings from localizations
* Bugfix: Gap between world halves on some resolutions should be eliminated now
* Bugfix: Refresh forced when changing language on logging in

<b>2009-07-13</b>

* Bugfix: Airport add from Import now works (2820603)

<b>2009-07-02</b>

* Launched German (de), Lithuanian (lt), Polish (pl), Swedish (sv)
* New icons for layer switcher, minimap
* Fix tab index bug for search

<b>2009-06-26</b>

* Airport route maps added (courtesy of Airline Route Mapper)
* Quick search widget added
* Autocomplete functionality changed, with fast delete (reset) of previously autocompleted entries
* DB licenses changed to Open Database License

<b>2009-06-23</b>

* Duplicate IATA codes no longer allowed

<b>2009-06-19</b>

* Language selector available for profile, trip display
* Switch UI language to user preference on login
* Bugfix: Facebook "Sign up" link was broken
* Additional translation for Finnish (fi)

<b>2009-06-16</b>

* Top 10 Airports generation sped up 100x
* Bugfix: __FLIGHTS__ raw string popping up in English

<b>2009-06-15</b>

* Fixes for Basic editor in non-English languages
* Minor UI tweaks for localization
* Updated Japanese strings

<b>2009-06-12</b>

* Launched French (fr), Russian (ru)

<b>2009-06-08</b>

* Localization implemented
* Launched Finnish (fi), Japanese (ja)
* Started French (fr)